Eliminando los circulos. La paz nunca fue una opcion :B

--- a/style.css
+++ b/style.css
@@ -188,12 +188,9 @@ nav{
     width: 80%;
   }
 
-  .mid-eclipse{
-    left: 10%;
-  }
 
   .big-eclipse,.mid-eclipse,.small-eclipse{
-    opacity: 0.2;
+    display: none;
   }
 
 }
